--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,21 @@
 	}
 }
 
+@media only screen and (max-width: 480px){
+.dropdown-content a {
+    font: 16px/1.9em 'librebaskerville-regular', serif! important;
+}
+.dropdown-content{
+	  margin-left: -118px;
+	}
+}
+
+@media only screen and (max-width: 767px) {
+.dropdown-content{
+	  margin-left: -20px;
+	}
+}
+
 /*Facebook*/
 header .social li a>.fa-facebook {
   color: inherit;
@@ -100,6 +115,8 @@ ul#nav li a:hover {
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
+.showmail {display:block;}
+
 .percent {
     color: #ccc;
     padding: 10px;
@@ -164,21 +181,21 @@ ul#nav li a:hover {
 	margin-top: 16px;
 }
 
-.swift .portfolio-item .item-wrap a h5 {
+.swift-portfolio .portfolio-item .item-wrap a h5 {
     background-color: #e6e8eb;
     border-radius: 0px 0px 5px 5px;
     text-align: center;
     border-bottom: 3px solid #ffac45;
 }
 
-.java .portfolio-item .item-wrap a h5 {
+.java-portfolio .portfolio-item .item-wrap a h5 {
     background-color: #e6e8eb;
     border-radius: 0px 0px 5px 5px;
     text-align: center;
     border-bottom: 3px solid #00f;
 }
 
-.html .portfolio-item .item-wrap a h5 {
+.html-portfolio .portfolio-item .item-wrap a h5 {
     background-color: #e6e8eb;
     border-radius: 0px 0px 5px 5px;
     text-align: center;
@@ -186,10 +203,66 @@ ul#nav li a:hover {
 }
 
 .item-wrap{
-    -webkit-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
-    -moz-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
-    -ms-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
-    -o-box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
-    box-shadow: 0px 0px 56px -8px rgba(0, 0, 0, 0.17);
+    -webkit-box-shadow: 6px -4px 20px 0px rgba(0, 0, 0, 0.17);
+    -moz-box-shadow: 6px -4px 20px 0px rgba(0, 0, 0, 0.17);
+    -ms-box-shadow: 6px -4px 20px 0px rgba(0, 0, 0, 0.17);
+    -o-box-shadow: 6px -4px 20px 0px rgba(0, 0, 0, 0.17);
+    box-shadow: 6px -4px 20px 0px rgba(0, 0, 0, 0.17);
 }
 
+#portfolio h1 {
+    font: 25px/14px 'opensans-semibold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-bottom: 48px;
+    color: #11abb0;
+}
+
+/*Facebook*/
+.social-links li a>.fa-facebook {
+  color: inherit;
+  transition: 0.3s;
+}
+
+.social-links li a>.fa-facebook:hover {
+	color: #2a5297;
+}
+
+/*Linkedin*/
+.social-links li a>.fa-linkedin {
+  color: inherit;
+  transition: 0.3s;
+}
+
+.social-links li a>.fa-linkedin:hover {
+	color: #0274b3;
+}
+
+/*Whatsapp*/
+.social-links li a>.fa-whatsapp {
+  color: inherit;
+  transition: 0.3s;
+}
+
+.social-links li a>.fa-whatsapp:hover {
+	color: #0d9f16;
+}
+
+/*E-mail*/
+.social-links li .fa-envelope {
+  color: inherit;
+  transition: 0.3s;
+}
+
+.social-links li .fa-envelope:hover {
+	color: #11ABB0;
+}
+
+.social-links li div #live:hover {
+	color: #0071c5;
+}
+
+.social-links li div #icloud:hover {
+	color: #3f73e3;
+}
