--- a/css/style.css
+++ b/css/style.css
@@ -266,3 +266,8 @@ ul#nav li a:hover {
 .social-links li div #icloud:hover {
 	color: #3f73e3;
 }
+
+#nav-wrap > a.mobile-btn {
+    border-radius: 0px 0px 0px 8px;
+    margin-right: -30px;
+}
